--- a/Jellyfin.Plugin.AutoStrm/Jellyfin.Plugin.AutoStrm.csproj
+++ b/Jellyfin.Plugin.AutoStrm/Jellyfin.Plugin.AutoStrm.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
- <TargetFramework>net9.0</TargetFramework>
+    <TargetFramework>net9.0</TargetFramework>
     <RootNamespace>Jellyfin.Plugin.AutoStrm</RootNamespace>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
@@ -11,8 +11,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-  <PackageReference Include="Jellyfin.Controller" Version="10.11.0-rc5" />
-  <PackageReference Include="Jellyfin.Model" Version="10.11.0-rc5" />
+    <PackageReference Include="Jellyfin.Controller" Version="10.11.0-rc5" />
+    <PackageReference Include="Jellyfin.Model" Version="10.11.0-rc5" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.2.5" />
   </ItemGroup>
 
   <ItemGroup>
